<resources>
    <string name="app_name">Covid19</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="statistics">Statistics</string>

    <string name="country">Country</string>
    <string name="dateSelect">Please Click And Select Date</string>
    <string name="dateTw">Date: </string>
    <string name="newCasesTw">New Cases: </string>
    <string name="newRecovered"> New Recovered: </string>
    <string name="newDeaths">New Deaths: </string>
    <string name="wentwrong">Somethings Went Wrong!</string>
    <string name="time">Time: </string>
    <string name="population">Population: </string>
    <string name="noInfo">Unknown</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="continent">Continent</string>
    <string name="cases">Cases</string>
    <string name="newCase">New Cases</string>
    <string name="activeCase">Active Cases</string>
    <string name="criticalCase">Critical Cases</string>
    <string name="totalCase">Total Cases</string>
    <string name="onemCase">1 M Case</string>

   <string name="Deaths">Deaths</string>
    <string name="newDeathsC">New Deaths</string>
    <string name="onemDeaths">1 M Deaths</string>
    <string name="tests">Test</string>
    <string name="oneMTest">1 M Tests</string>
    <string name="testTotal">Total Tests</string>
    <string name="day">Day</string>
    <string name="timeC">Time</string>
    <string name="totalDeaths">Total Deaths</string>
    <string name="countryInfo">Country Informations</string>

    <string name="mail">ahmetkeskiinnn@outlook.com</string>
    <string name="sampleApp">Covid-19 Statistics For Countries</string>
    <string name="statisticFragmentToast">Please click on the country whose statistics you want to view.</string>
    <string name="homeFragmentToast">Countries, ships, islands available for viewing.</string>

</resources>