<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Views.Fragments.CountryStatistics">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/virus"
        android:scaleType="centerCrop"
        android:alpha="0.20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/continentCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toEndOf="@+id/country"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout

        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/caseColor"
                android:textStyle="bold"
                android:textSize="25dp"
                android:layout_height="wrap_content"
                android:text="@string/cases" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/caseSubColor"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="@string/newCase" />

            <TextView
                android:id="@+id/newCasesCountCountry"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="15dp"
                android:layout_marginStart="10dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/caseSubColor"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="@string/criticalCase" />

            <TextView
                android:id="@+id/criticalCasesCountry"
                android:layout_width="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="15dp"
                android:layout_height="wrap_content"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activeCases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/caseSubColor"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="@string/activeCase" />

            <TextView
                android:id="@+id/activeCasesCountCountry"
                android:layout_width="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="15dp"
                android:layout_height="wrap_content"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/oneMPopCases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/caseSubColor"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="@string/onemCase" />

            <TextView
                android:id="@+id/oneMPopCasesCountry"
                android:layout_width="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="15dp"
                android:layout_height="wrap_content"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:textColor="@color/caseSubColor"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="@string/totalCase" />

            <TextView
                android:id="@+id/totalCasesCountry"
                android:layout_width="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="15dp"
                android:layout_height="wrap_content"


                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/deathsColor"
                android:textStyle="bold"
                android:textSize="25dp"
                android:text="@string/Deaths" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/deathsSubColor"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_height="wrap_content"
                android:text="@string/newDeathsC" />

            <TextView
                android:id="@+id/deathsCountCountry"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="15dp"
                android:layout_marginStart="10dp"
                android:layout_height="wrap_content"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/deathsSubColor"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="@string/onemDeaths" />

            <TextView
                android:id="@+id/oneMDeathsPop"
                android:layout_width="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="15dp"
                android:layout_height="wrap_content"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:textColor="@color/deathsSubColor"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="@string/totalDeaths" />

            <TextView
                android:id="@+id/totalDeathsCountry"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="15dp"

                android:layout_height="wrap_content"

                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/testColor"
                android:textStyle="bold"
                android:textSize="25dp"
                android:text="@string/tests" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/testSubColor"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="@string/oneMTest" />

            <TextView
                android:id="@+id/oneMTestCountry"
                android:layout_width="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="15dp"
                android:layout_height="wrap_content"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/testSubColor"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="@string/testTotal" />

            <TextView
                android:id="@+id/totalTestCountry"
                android:layout_width="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="15dp"
                android:layout_height="wrap_content"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"

                android:textSize="18dp"
                android:layout_height="wrap_content"
                android:text="@string/dateTw" />

            <TextView
                android:id="@+id/dayCountry"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="@string/timeC" />

            <TextView
                android:id="@+id/timeCountry"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginStart="10dp"
                android:layout_height="wrap_content"

                />
        </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>