<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:backgroundTint="@color/rawColor"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/countryName"
            android:textSize="24sp"
            android:text="asdasd"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/newCasesTw"
                    android:textSize="12sp"
                    />
                <TextView
                    android:id="@+id/newCasesCount"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/newDeaths"
                    android:layout_width="wrap_content"
                    android:text="@string/newDeaths"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:id="@+id/newDeathsCount"
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginStart="10dp"
                    android:textSize="12sp"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/newRecovered"
                    android:layout_width="wrap_content"
                    android:text="@string/newRecovered"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:id="@+id/newRecoveredCount"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/black"
                        android:text="@string/dateTw"
                        />
                    <TextView
                        android:id="@+id/currentDate"
                        android:layout_width="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="12sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/black"
                        android:text="@string/time"
                        />
                    <TextView
                        android:id="@+id/currentTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/black"
                        android:textSize="12sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/population"
                        android:textColor="@color/black"
                        />
                    <TextView
                        android:id="@+id/populationCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_marginStart="10dp"
                        android:textSize="12sp"/>
                </LinearLayout>




            </LinearLayout>
        </LinearLayout>
        </LinearLayout>





</androidx.cardview.widget.CardView>